import { StyleSheet, Text, View } from 'react-native';

import { useRef, useState, useCallback, useEffect } from 'react';

import { GestureHandlerRootView } from 'react-native-gesture-handler';

import { LoadingButton } from './components/loading-button';

const wait = async (timeout: number) => {
  return new Promise(resolve => setTimeout(resolve, timeout));
};

const useMutation = () => {
  const [status, setStatus] = useState<
    'idle' | 'loading' | 'success' | 'error'
  >('idle');
  const [isLoading, setIsLoading] = useState(false);
  const timeoutRef = useRef<NodeJS.Timeout | null>(null);

  const mutateAsync = useCallback(
    async (mutationFn: () => Promise<void>) => {
...
