...
  });

  return (
    <View style={styles.buttonContainer}>
      <Animated.View style={buttonPulseStyle}>
        <PressableScale
          testID="notion-qrcode-toggle"
          style={styles.button}
          onPress={onPress}>
          <Animated.View style={[styles.iconContainer, teamIconStyle]}>
            <Ionicons name="scan" size={28} color="#1a1a1a" />
          </Animated.View>

...
