...
  return (
    <View style={styles.container}>
      <CircularButton
        blastRadius={blastRadius}
        size={buttonSize}
        onPress={() => {
          console.log('pressed :)');
        }}
      />
    </View>
  );
};

...
