...
                <DismissButton onPress={onDismiss} style={styles.button}>
                  <Text style={styles.buttonText}>Dismiss</Text>
                </DismissButton>
                <HighlightedConfirmButton
                  onPress={onConfirm}
                  style={styles.button}>
                  <Text style={styles.buttonText}>Confirm</Text>
                </HighlightedConfirmButton>
              </View>
            </View>
          );
        },
      });
...
