...

export const useLeaveFeedback = ({ screenName }: { screenName: string }) => {
  const leaveFeedback = useCallback(() => {
    Alert.alert('Leave Feedback', 'Do you want to leave feedback?', [
      { text: 'Cancel', style: 'cancel' },
      {
        text: 'OK',
        onPress: () => {
          const subject = screenName
            ? `Feedback on ${screenName} screen`
            : 'Reactiive Demos Feedback';
          Linking.openURL(`mailto:hello@reactiive.io?subject=${subject}`);
        },
...
