...
  RadialGradient,
  useFont,
  vec,
} from 'react-native-skia';
import { scheduleOnRN } from 'react-native-worklets';

import { GridVisualizer as GridVisualizerComponent } from './grid-visualizer';

const { width: WindowWidth, height: WindowHeight } = Dimensions.get('window');

const CanvasWidth = 300;
const CanvasHeight = 340;

...
